--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "classnames": "^2.5.1",
     "next": "14.1.0",
     "react": "^18",
+    "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-lottie-player": "^2.1.0",
     "react-toastify": "^10.0.5",
     "sass": "^1.79.3",
     "zustand": "^5.0.0-rc.2"
