--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-next-experimental": "^5.56.2",
     "axios": "^1.7.7",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "next": "14.1.0",
     "react": "^18",
     "react-cookie": "^7.2.0",
