--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.53.0",
     "react-lottie-player": "^2.1.0",
     "react-toastify": "^10.0.5",
+    "react-youtube": "^10.1.0",
     "sass": "^1.79.3",
     "tailwind-merge": "^2.5.3",
     "zustand": "^5.0.0-rc.2"
