--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@tanstack/react-query-devtools": "^5.56.2",
     "@tanstack/react-query-next-experimental": "^5.56.2",
     "axios": "^1.7.7",
+    "chart": "^0.1.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "next": "14.1.0",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
