--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@tanstack/react-query-next-experimental": "^5.56.2",
+    "antd": "^5.21.4",
     "axios": "^1.7.7",
     "chart": "^0.1.2",
     "classnames": "^2.5.1",
