--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-youtube": "^10.1.0",
     "sass": "^1.79.3",
     "tailwind-merge": "^2.5.3",
+    "youtube-transcript": "^1.2.1",
     "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
