--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chart": "^0.1.2",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
+    "franc": "^6.2.0",
     "lodash": "^4.17.21",
     "next": "14.1.0",
     "react": "^18",
