--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^5.56.2",
     "@tanstack/react-query-devtools": "^5.56.2",
     "@tanstack/react-query-next-experimental": "^5.56.2",
